# libaitfoaq

./: Cargo.toml  LICENSE-OFL.txt
.cargo/: config.toml
example-boards/: webengdus-2024-04-24-round1.json  webengdus-2024-04-24-round2.json
libaitfoaq/: Cargo.toml
libaitfoaq/src/: events.rs  lib.rs  state.rs  test_state_machine.rs
rpi-controller/: Cargo.toml
rpi-controller/src/: main.rs
server/: Cargo.toml
server/src/: communication.rs  main.rs  state.rs
server/templates/: admin.html  board.html  confetti.min.js  contestants.html  error.html  index.html  state.html  style.css
src/: main.rs
