[package]
name = "libaitfoaq-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libaitfoaq = { path = "../libaitfoaq" }
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["default", "ws", "tracing"] }
tokio = { version = "1.37.0", features = ["macros", "rt", "signal", "fs"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
console-subscriber = "0.2.0"
serde = "1.0.198"
serde_json = "1.0.116"
thiserror = "1.0.58"
